--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
   },
   "dependencies": {
     "express": "^4.18.2",
-    "uuid": "^9.0.0"
+    "express-session": "^1.17.3",
+    "body-parser": "^1.20.2"
   }
 }
 
